Fix scroll bug which causes overflowing of the card container

--- a/src/css/sidebar.css
+++ b/src/css/sidebar.css
@@ -51,6 +51,7 @@
 
 /* Individual item */
 .bm-item {
+  display: flex !important;
   outline: none;
   text-align: left;
   text-decoration: none;
@@ -68,4 +69,39 @@
   width: 100%;
   box-sizing: border-box;
   box-shadow: 0px 10px 10px var(--grey);
+}
+
+/************* Scrolling ************/
+.box {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+}
+
+.head {
+  border: none;
+  flex-shrink: 0;
+}
+
+.content {
+  border: none;
+  overflow-y: scroll;
+}
+
+::-webkit-scrollbar {
+  width: 0.5em;
+}
+
+::-webkit-scrollbar-track {
+  background: transparent;
+  border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb {
+  border-radius: 10px;
+  background-color: var(--grey);
 }
