--- a/src/css/tabs.css
+++ b/src/css/tabs.css
@@ -1,13 +1,4 @@
-#results {
-  color: black;
-  margin: 0;
-}
-
-#scroll-container {
-  border: none;
-}
-
-#result-container {
+.cards-container {
   margin: 0;
   padding: 1em 1em 0.5em 1em;
 }
@@ -21,35 +12,24 @@
   margin-right: 0.8em;
 }
 
-/**************** Scrolling ***************/
 .box {
-  position: relative;
+  position: absolute;
   top: 0;
   left: 0;
   width: 100%;
   height: 100vh;
-  background: white;
-  overflow: auto;
+  border: none;
+  overflow-y: scroll;
 }
 
 .flex-horizontal {
   display: flex;
   flex-direction: row;
   margin: 0;
-}
-
-.head {
   border: none;
-  flex-shrink: 0;
   padding: 0 1em 0em 1em;
   margin-right: 5px;
   z-index: 10;
-}
-
-.content {
-  border: none;
-  flex: 1;
-  overflow-y: scroll;
 }
 
 ::-webkit-scrollbar {
